Fix alignment of FriendIndexItem content with Grid

--- a/frontend/src/components/friends/friends.css
+++ b/frontend/src/components/friends/friends.css
@@ -35,15 +35,6 @@
     font-weight: 400;
 }
 
-
-.friend-cards-container ul {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-    width: 100%;
-    padding-left: 326px;
-}
-
 .friend-card-outer-container {
     margin: 30px;
 }
@@ -55,16 +46,9 @@
     border: 1px solid black;
     padding: 20px;
     border-radius: 10px;
-/*     animation: loading 3s; */
-}
-
-@keyframes loading {
-    0% {
-        opacity: 0%
-    }
-    100% {
-        opacity: 100%
-    }
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .friends-index-loading-box {
@@ -102,17 +86,22 @@
 
 /* FRIEND INDEX ITEMS */
 
-.friend-card-container ul {
+/* .friend-card-container ul {
     list-style: none;
     margin: 0;
     padding: 0;
     display: block;
     text-align: center;
     height: 206px;
-}
+} */
 
 .friends-card-wrapper {
     margin-bottom: 100px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    width: 100%;
+    padding-left: 326px;
 }
 
 .friend-card-container ul li:not(:first-child) {
@@ -121,6 +110,20 @@
 
 .friend-index-item-name {
 }
+
+.friend-index-item-grid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    height: 45px;
+    margin-bottom: 4px;
+}
+
+/* .friend-index-item-grid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    height: 144px;
+} */
 
 .friend-index-item-header {
     margin: -20px -20px 10px -20px;
@@ -135,6 +138,30 @@
     white-space: nowrap;
     border-top-left-radius: 7px;
     border-top-right-radius: 7px;
+}
+
+.index-age-tag {
+    grid-area: 1 / 1 / 2 / 2;
+}
+
+.index-age-text {
+    grid-area: 1 / 2 / 2 / 3;
+}
+
+.index-dob-tag {
+    grid-area: 2 / 1 / 3 / 2;
+}
+
+.index-dob-text {
+    grid-area: 2 / 2 / 3 / 3;
+}
+
+.index-location-tag {
+    grid-area: 3 / 1 / 4 / 2;
+}
+
+.index-location-text {
+    grid-area: 3 / 2 / 4 / 3;
 }
 
 .friend-index-item-header > p {
@@ -169,11 +196,12 @@
     text-align: center;
     opacity: 0.5;
     display: none;
+    margin-top: 11px;
 }
 
 .friend-card-container ul::after:hover {
     content: "click for more details";
-    text-align: center;
+    /* text-align: center; */
     display: block;
 }
 
@@ -189,7 +217,7 @@
 }
 
 .friend-create-link-card:hover, .friend-card-container:hover {
-    text-align: center;
+    /* text-align: center; */
     cursor: pointer;
     transition: 0.5s;
     transform: scale(1.025);
@@ -308,6 +336,7 @@
     animation: float-effect 3s;
     transform: translateY(0px);
     margin-top: 3px;
+    margin: auto 0;
 }
 
 .friend-show-div:hover {
@@ -355,6 +384,9 @@
 
 .friend-show-text {
     margin-top: 3px;
+    /* text-align: right; */
+    margin: auto 0;
+    text-align: center;
 }
 
 .friend-show-tag {
